[package]
name = "caulk_single_opening"
version = "0.1.0"
authors = ["mmaller <mary.maller@ethereum.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-poly = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false, optional = true }
ark-bls12-381 = { version = "^0.3.0", features = [ "std" ] }
ark-bls12-377 = { version = "^0.3.0", features = [ "std" ] }
ark-poly-commit = { version = "^0.3.0", default-features = false }

tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }
derivative = { version = "2.0", features = ["use_core"], optional = true}
rand = "0.8.5"
rand_chacha = { version = "0.3.1" }
thiserror = "1.0.19"
blake2s_simd = "1.0.0"

rayon = { version = "1.5.2", default-features = false, optional = true }
merlin = { version = "3.0.0" }

[features]
asm = [ "ark-ff/asm" ]
parallel = [ 
    "rayon",
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel" 
    ]
print-trace = [
    "ark-std/print-trace"
]

